<resources>
    <string name="app_name">ChatApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Joshua König</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign out</string>
    <string name="verify_email">Verify Email</string>
    <string name="emailpassword_title_text">Login</string>
    <string name="server_client_id">305546480769-bd0ugdv01at6gfbod03nqp4b0i8uio33.apps.googleusercontent.com</string>
    <string name="preference_group_chat_key">PREF_GROUP_CHAT_KEY</string>
    <string name="preference_group_profile_key">PREF_GROUP_PROFILE_KEY</string>
    <string name="google_maps_api_key"></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>